tom.yml
apiVersion: v1
kind: Service
metadata:
  name: tom-svc
spec:
  selector:
    app: tom
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tom-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tom
  template:
    metadata:
      name: tom-pod
      labels:
        app: tom
    spec:
      containers:
      - name: tom-con
        image: tomcat
        volumeMounts:
        - name: index-config-vol
          mountPath: /usr/local/tomcat/webapps/ROOT/index.jsp
          subPath: index.jsp
        - name: lib-vol
          mountPath: /usr/local/tomcat/lib/mysql-connector-java-8.0.23.jar
          subPath: mysql-connector-java-8.0.23.jar
      volumes:
      - name: index-config-vol
        configMap:
          name: tom-configmap
          items:
          - key: index.jsp
            path: index.jsp
      - name: lib-vol
        persistentVolumeClaim:
          claimName: tom-pvc
